[project]
name = "delao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esper>=3.7",
    "pygame>=2.6.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "ruff>=0.15.2",
]
